@@ -1,5 +1,8 @@
 2008-11-11  Ales Hakl  <ales at hakl dot net>
 
+	* src/introspect.c (dfsch_format_stack_trace): pretty-print stack
+	traces
+
 	* src/dfsch.c (dfsch_apply_impl): Application of nil leads to error
 
 2008-11-03  Ales Hakl  <ales at hakl dot net>
